--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ repositories {
 }
 
 dependencies {
-    implementation project(":commons")
+    testImplementation 'org.testng:testng:7.9.0'
+    testImplementation 'com.codeborne:selenide:7.2.1'
+    testImplementation project(":commons")
 }
 
 test {
