--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'groovy'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group = 'org.example'
@@ -18,6 +19,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    runtimeOnly 'org.aspectj:aspectjweaver:1.9.22'
+    testImplementation 'io.qameta.allure:allure-rest-assured:2.26.0'
+    testImplementation 'io.qameta.allure:allure-selenide:2.26.0'
+    testImplementation 'io.qameta.allure:allure-java-commons:2.26.0'
+    testImplementation 'io.qameta.allure:allure-testng:2.26.0'
 }
 
 test {
