--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-selenide:2.26.0'
     testImplementation 'io.qameta.allure:allure-java-commons:2.26.0'
     testImplementation 'io.qameta.allure:allure-testng:2.26.0'
+    implementation 'io.rest-assured:json-schema-validator:5.4.0'
+
 }
 
 
